hphp/test/quick/continuation_inherit.php.expectf
bool(true)
HipHop Fatal error: Class HerpDerp may not inherit from final class (Continuation) in %s on line 4
